@@ -16,7 +16,6 @@ _('FindPage')
 _('SiteNavigation')
 _('HelpContents')
 _('HelpOnFormatting')
-_('UserPreferences')
 _('SendMyPassword')
 _('WikiLicense')
 _('MissingPage')
